--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -1,9 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0">
   <display-name></display-name>
+  	
   <welcome-file-list>
     <welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
+  
+  <servlet>
+		<servlet-name>initServlet</servlet-name>
+		<servlet-class>
+			com.giscafer.servlet.InitServlet
+		</servlet-class>
+		<!-- 配置获取access_token所需参数appid和appsecret -->
+		<init-param>
+			<param-name>appid</param-name>
+			<param-value>wx27fe66a6820ba9ae</param-value>
+		</init-param>
+		<init-param>
+			<param-name>appsecret</param-name>
+			<param-value>973b8f9a2d1d7491a6bd7235e5d9bd31</param-value>
+		</init-param>
+		<load-on-startup>0</load-on-startup>
+	</servlet>
+
   <servlet>
     <servlet-name>weixinServlet</servlet-name>
     <servlet-class>com.giscafer.servlet.WeixinServlet</servlet-class>
